<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MyProfileActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_collapseMode="pin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/my_profile"
            app:titleTextColor="@android:color/white" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/profile_image_width"
            android:layout_height="@dimen/profile_image_height"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/my_profile"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/mbobiosio" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/name"
            android:textSize="@dimen/name_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05109489" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/track"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/tv_track"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:text="@string/android_track"
            android:textSize="@dimen/detail_text_size"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_track"
            app:layout_constraintTop_toBottomOf="@+id/tv_track" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/country"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:text="@string/nigeria"
            android:textSize="@dimen/detail_text_size"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_country"
            app:layout_constraintTop_toBottomOf="@+id/tv_country" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:textSize="@dimen/detail_text_size"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:text="@string/phone_no"
            android:textSize="@dimen/detail_text_size"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <View
            android:id="@+id/view5"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_phone"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/slack_username"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/view5"
            app:layout_constraintTop_toBottomOf="@+id/view5" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slack"
            android:textSize="@dimen/detail_text_size"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <View
            android:id="@+id/view6"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>